--- a/common/css/project.scss
+++ b/common/css/project.scss
@@ -235,6 +235,12 @@ $nums: (
   }
 }
 
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .flex-a-center {
   display: flex;
   align-items: center;
