✨ 完成发布页面逻辑/完成chat页面

--- a/common/css/project.scss
+++ b/common/css/project.scss
@@ -252,6 +252,11 @@ $nums: (
   justify-content: center;
 }
 
+.flex-j-right {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .flex-a-center-j-space-between {
   display: flex;
   align-items: center;
